syntax = "proto3";

package atomix.lock.service;

import "atomix/primitive/service.proto";

option java_package = "io.atomix.core.lock.impl";
option java_outer_classname = "AtomicLockProto";
option java_multiple_files = true;

// Lock snapshot
message AtomicLockSnapshot {
    LockCall lock = 1;
    repeated LockCall queue = 2;
}

// Lock call
message LockCall {
    int64 index = 1;
    int64 session_id = 2;
    int64 expire = 3;
}

message LockRequest {
    int64 timeout = 1;
}

message LockResponse {
    int64 index = 1;
    bool acquired = 2;
}

message UnlockRequest {
    int64 index = 1;
}

message UnlockResponse {
    bool succeeded = 1;
}

message IsLockedRequest {
    int64 index = 1;
}

message IsLockedResponse {
    bool locked = 1;
}

// Lock service
service LockService {
    rpc Lock(LockRequest) returns (LockResponse) {
        option (atomix.primitive.service.operation) = {
            name: "lock"
            type: COMMAND
            async: true
        };
    }

    rpc Unlock(UnlockRequest) returns (UnlockResponse) {
        option (atomix.primitive.service.operation) = {
            name: "unlock"
            type: COMMAND
        };
    }

    rpc IsLocked(IsLockedRequest) returns (IsLockedResponse) {
        option (atomix.primitive.service.operation) = {
            name: "islocked"
            type: QUERY
        };
    }
}
